Sun Jul 22 22:27:23 UTC 2012  Trevor Fields  <fields_t@ociweb.com>

        * tests/DCPS/ConfigTransports/ConfigTransports.mpc:
        * tests/DCPS/Ownership/Ownership.mpc:
        * tests/DCPS/Partition/Partition.mpc:
          Added missing libraries for static builds.

Thu Jul 19 20:19:13 UTC 2012  Trevor Fields  <fields_t@ociweb.com>

        * performance-tests/Bench/bin/plot-throughput-testformats.gpi:
        * performance-tests/Bench/bin/plot-throughput-transports.gpi:
          Corrected typos.

Thu Jul 19 18:39:13 UTC 2012  Trevor Fields  <fields_t@ociweb.com>

        * tests/DCPS/ConfigTransports/publisher.cpp:
        * tests/DCPS/ConfigTransports/subscriber.cpp:
        * tests/DCPS/Deadline/publisher.cpp:
        * tests/DCPS/DomainParticipantId/dp.cpp:
        * tests/DCPS/Ownership/publisher.cpp:
        * tests/DCPS/Ownership/subscriber.cpp:
        * tests/DCPS/Rejects/publisher.cpp:
        * tests/DCPS/Rejects/subscriber.cpp:
        * tests/DCPS/TopicReuse/tpreuse.cpp:
          Added includes for rtps in static builds.

Wed Jul 18 20:55:46 UTC 2012  Trevor Fields  <fields_t@ociweb.com>

        * performance-tests/Bench/bin/run_test:
          Added signal handler to kill running processes. 

        * performance-tests/Bench/etc/transport-rtps.ini:
        * performance-tests/Bench/etc/transport.ini:
        * performance-tests/Bench/src/testprocess.cpp:
        * performance-tests/Bench/src/TestProcess.mpc:
          Corrections to build and run on static build.

Tue Jul 17 22:42:45 UTC 2012  Trevor Fields  <fields_t@ociweb.com>

        * bin/performance_tests.lst:
        * performance-tests/Bench/bin/extract-throughput.pl:
        * performance-tests/Bench/bin/gen-latency-tables.pl:
        * performance-tests/Bench/bin/gen-throughput-tables.pl:
        * performance-tests/Bench/bin/generate-perf-html.sh:
        * performance-tests/Bench/bin/generate-test-results.sh:
        * performance-tests/Bench/bin/mktable.pl: